@@ -43,9 +43,12 @@
  * HISTORY
  * 
  * $Log$
- * Revision 1.9  2005/01/13  15:22:11  rkm
- * Fixed some comments relating to s2_fsg_t structure
+ * Revision 1.10  2005/01/26  17:54:51  rkm
+ * Added -maxhmmpf absolute pruning parameter in FSG mode
  * 
+ * Revision 1.9  2005/01/13 15:22:11  rkm
+ * Fixed some comments relating to s2_fsg_t structure
+ *
  * Revision 1.8  2004/07/23 23:36:33  egouvea
  * Ravi's merge, with the latest fixes in the FSG code, and making the log files generated by FSG, LM, and allphone have the same 'look and feel', with the backtrace information presented consistently
  *
@@ -644,7 +647,10 @@ int32 query_fwdflat_flag ( void );
 int32 query_bestpath_flag ( void );
 int32 query_topsen_window ( void );
 int32 query_topsen_thresh ( void );
+
+/* Absolute pruning thresholds for words exiting, active HMMs per frame (approx) */
 int32 query_maxwpf ( void );
+int32 query_maxhmmpf ( void );
 
 int32 query_compute_all_senones (void);
 int32 query_sampling_rate ( void );
